--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
             <button id="restart-btn" style="display:none;">Restart</button>
 
             <p id="message"></p>
-            <p id="copyright"> Copyright © 2025 Maëlle Aucher. Tous droits réservés.</p>
-            <div class="links">
+            <p id="copyright"> Copyright © 2025 Maëlle Aucher. Tous droits réservés.
                 <a href="https://github.com/aucherm" target="_blank" class="icon-link" alt="lien vers page GitHub">
                     <i class="fa-brands fa-github fa-2x"></i>
                 </a>
@@ -46,7 +45,8 @@
                     alt="lien vers page LinkedIn">
                     <i class="fa-brands fa-linkedin fa-2x"></i>
                 </a>
-            </div>
+            </p>
+
         </div>
         <div class="right" id="right-panel">
 
