--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
             <p id="message"></p>
             <p id="copyright"> Copyright © 2025 Maëlle Aucher. Tous droits réservés.
                 <a href="https://github.com/aucherm" target="_blank" class="icon-link" alt="lien vers page GitHub">
-                    <i class="fa-brands fa-github fa-2x"></i>
+                    <i class="fa-brands fa-github fa-sm"></i>
                 </a>
 
                 <a href="https://www.linkedin.com/in/maëlle-aucher-502646137/" target="_blank" class="icon-link"
                     alt="lien vers page LinkedIn">
-                    <i class="fa-brands fa-linkedin fa-2x"></i>
+                    <i class="fa-brands fa-linkedin fa-sm"></i>
                 </a>
             </p>
 
